Display the missing index on failed migrations due to missing index

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ClusterScalability Dec8-Dec22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A migration can fail if a index is missing and the collection is not empty.

      The uassert advises the user to manually create the index, but it doesn't display the missing index. This requires the customer run a manual check which can be difficult when the list of index is big.
      We should return more information or at least display the index.
      I would also recommend to backport this solution to at least v8.0 to ease the work of the support team

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Enrico Golfieri
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: