SERVER-112943 Error message to include missing index names when collection is not empty (#44950)

GitOrigin-RevId: 4e7fe2a2f0d87c11fe5bd74eba25cc5c3ce25cad